18.keycloak-mzd/03.Service-Headless.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak-headless
  namespace: keycloak
spec:
  clusterIP: None
  selector:
    app: keycloak
