18.keycloak-mzd/04.Service-Ingress.yaml
apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: keycloak
  labels:
    app: keycloak
  annotations:
    alb.ingress.kubernetes.io/healthcheck-path: /realms/master
    prometheus.io/scrape: "false"
    # service.beta.kubernetes.io/aws-load-balancer-scheme: "internet-facing"
    # service.beta.kubernetes.io/aws-load-balancer-type: nlb
    # external-dns.alpha.kubernetes.io/hostname: keycloak.eksoffer.shop
    # service.beta.kubernetes.io/aws-load-balancer-ssl-cert: arn:aws:acm:ap-southeast-1:446805103418:certificate/c5a0237d-600c-4306-9c55-850c42680625
    # service.beta.kubernetes.io/aws-load-balancer-nlb-target-type: ip
    # #service.beta.kubernetes.io/aws-load-balancer-backend-protocol: 'http'
    # #service.beta.kubernetes.io/aws-load-balancer-target-group-attributes: stickiness.enabled=true,stickiness.type=source_ip
    # #service.beta.kubernetes.io/aws-load-balancer-ssl-ports: 'HTTPS'
spec:
  ports:
    - name: http
      port: 8080
      targetPort: 8080
    - name: infinispan
      port: 7800
      targetPort: 7800
      protocol: TCP
  selector:
    app: keycloak
  #type: NodePort
  type: ClusterIP
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak
  namespace: keycloak
  annotations:
    #kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
    alb.ingress.kubernetes.io/backend-protocol: HTTPS
    alb.ingress.kubernetes.io/load-balancer-name: keycloak-alb-ingress
    alb.ingress.kubernetes.io/healthcheck-protocol: HTTP
    alb.ingress.kubernetes.io/healthcheck-port: traffic-port
    alb.ingress.kubernetes.io/success-codes: "200-399"
    #alb.ingress.kubernetes.io/target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=60
    # alb.ingress.kubernetes.io/ssl-passthrough: "true"
    # alb.ingress.kubernetes.io/description: 'alb ingress controller'
    # alb.ingress.kubernetes.io/healthcheck-path: /login
    ## SSL Settings
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTP": 8080},{"HTTPS": 8443}]'
    #alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-northeast-2:446805103418:certificate/e93c75b9-7009-42c3-9aae-93cd5083be2a
    #alb.ingress.kubernetes.io/backend-protocol: HTTP
    #alb.ingress.kubernetes.io/ssl-redirect: '8443'
    #alb.ingress.kubernetes.io/actions.redirect-to-https: '{"Type":"redirect","RedirectConfig":{"Port":"443","Protocol":"HTTPS","StatusCode":"HTTP_301"}}'
    external-dns.alpha.kubernetes.io/hostname: "keycloak.inspire-war.shop" # DNS 설정
spec:
  ingressClassName: alb
  tls:
    - hosts:
        - "keycloak.inspire-war.shop"
  rules:
    - host: "keycloak.inspire-war.shop"
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak
                port:
                  number: 8080
---
